--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.onboarding {
+  background-image: url("./images/main-bg.png");
+  height: 100vh;
+  width: 100vw;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
